refactor: responasble de validation workflow
